--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">NoteKeeper</string>
-    <string name="action_settings">Send Email</string>
+    <string name="action_settings">Setting</string>
     <string name="tittle_activity_note">Edit Note</string>
     <string name="title_activity_main">NoteKeeper</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
