--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,12 @@
     <string name="sync_header">Sync</string>
 
     <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
+    <string name="user_display_name">Display Name</string>
+    <string name="user_display_tittle_name">Your Name</string>
     <string name="reply_title">Default reply action</string>
+    <string name="pref_title_email">Email Adress</string>
+    <string name="social_favourite_title">Favourite Social Network</string>
+
 
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
@@ -35,7 +39,6 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="title_activity_main2">Main2Activity</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
