--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">NoteKeeper</string>
     <string name="action_settings">Setting</string>
     <string name="action_backup_notes">Back Up Notes</string>
+
+    <string name="action_upload_notes">Upload Notes</string>
     <string name="action_set_reminder">Set Reminder</string>
     <string name="tittle_activity_note">Edit Note</string>
     <string name="title_activity_main">NoteKeeper</string>
